--- a/ttm4905_msc - Copy/glossary.tex
+++ b/ttm4905_msc - Copy/glossary.tex
@@ -11,12 +11,12 @@ description={A dummy symbol }}
 \newacronym{b2c}{B2C}{Business-to-consumer}
 \newacronym{b2bc}{B2B\&C}{Business-to-business-\&-consumer}
 \newacronym{mm}{MM}{MazeMap}
-\newacronym{saas}{SaaS}{Software-as-a-service}
+\newacronym{saas}{SaaS}{Software as a service}
 \newacronym{hei}{HEI}{Higher Education Institution}
-\newacronym{sme}{SME}{Small and Medium Enterprises}
+\newacronym{sme}{SME}{Small and Medium-sized Enterprise}
 \newacronym{arr}{ARR}{Annual Recurring Revenue}
 \newacronym{api}{API}{Application Programming Interface}
-\newacronym{smb}{SMB}{Small and Medium Business}
+\newacronym{smb}{SMB}{Small and Medium-sized Business}
 \newacronym{scup}{SCUP}{Society for College and University Planning}
 \newacronym{appa}{APPA}{APPA: Leadership in Educational Facilities}
 \newacronym{tefma}{TEFMA}{Tertiary Education Facilities Management Association}
@@ -25,6 +25,7 @@ description={A dummy symbol }}
 \newacronym{sdk}{SDK}{Software Development Kit}
 \newacronym{ble}{BLE}{Bluetooth Low Energy}
 \newacronym{poi}{POI}{Point-of-interest}
-
+\newacronym{nhs}{NHS}{National Health Service}
+\newacronym{iot}{IoT}{Internet of Things}
 
 
