--- a/ttm4905_msc - Copy/main.bib
+++ b/ttm4905_msc - Copy/main.bib
@@ -253,3 +253,232 @@
     url    = "http://indoo.rs/technology/",
     note  = "[Online; accessed 21-06-2016]"
 },
+
+@ONLINE {fredwilson20062,
+    author = "Fred Wilson",
+    title  = "The Freemium Business Model",
+    month  = "mar",
+    year   = "2006",
+    url    = "http://avc.com/2006/03/the_freemium_bu/",
+    note  = "[Online; accessed 21-06-2016]"
+},
+
+@ONLINE {katherineheires2007,
+    author = "Katherine Heires",
+    title  = "Why It Pays to Give Away the Store",
+    month  = "mar",
+    year   = "2007",
+    url    = "http://money.cnn.com/magazines/business2/business2_archive/2006/10/01/8387115/",
+    note  = "[Online; accessed 21-06-2016]"
+},
+
+@ONLINE {chrisanderson2008,
+    author = "Chris Anderson",
+    title  = "The three kinds of FREE",
+    month  = "sep",
+    year   = "2008",
+    url    = "http://www.longtail.com/the_long_tail/2008/09/the-three-kinds.html",
+    note  = "[Online; accessed 21-06-2016]"
+},
+
+@ONLINE {jonaskjellberg2014,
+    author = "Jonas Kjellberg",
+    title  = "Troublemaking Skype - Technoport 2014",
+    month  = "may",
+    year   = "2014",
+    url    = "https://www.youtube.com/watch?v=G3a2NX2kIb0",
+    note  = "[Online video; accessed 21-06-2016]"
+},
+
+@book{selden1996,
+ author = {Selden, Paul H.},
+ title = {Sales Process Engineering: A Personal Workshop},
+ year = {1996},
+ isbn = {0873894189},
+ publisher = {ASQ Quality Press},
+},
+
+@ONLINE {chrisanderson2012,
+    author = "Chris Anderson",
+    title  = "Finding a Freemium model that works for you",
+    month  = "nov",
+    year   = "2012",
+    url    = "http://www.longtail.com/the_long_tail/2008/11/finding-a-freem.html",
+    note  = "[Online; accessed 21-06-2016]"
+},
+
+@ONLINE {lifeofentrepeneur2015,
+    author = "Life of Entrepeneur",
+    title  = "Meaning of Cannibalization",
+    month  = "aug",
+    year   = "2015",
+    url    = "http://webcache.googleusercontent.com/search?q=cache:-0xB-sk2WuAJ:lifeofentrepreneur.net/tag/meaning-of-cannibalization/+\&cd=1\&hl=no\&ct=clnk\&gl=no",
+    note  = "[Online; accessed 21-06-2016]"
+},
+
+@ONLINE {microsoft2016,
+    author = "Microsoft",
+    title  = "BizSpark",
+    month  = "jun",
+    year   = "2016",
+    url    = "https://www.microsoft.com/bizspark/",
+    note  = "[Online; accessed 21-06-2016]"
+},
+
+@ONLINE {splunk2016,
+    author = "Splunk",
+    title  = "Splunk® Light",
+    month  = "jun",
+    year   = "2016",
+    url    = "http://www.splunk.com/en_us/products/splunk-light.html",
+    note  = "[Online; accessed 21-06-2016]"
+},
+
+@ONLINE {chrisanderson2008feb,
+    author = "Chris Anderson",
+    title  = "Free! Why \$0.00 Is the Future of Business",
+    month  = "feb",
+    year   = "2008",
+    url    = "http://www.wired.com/2008/02/ff-free/",
+    note  = "[Online; accessed 21-06-2016]"
+},
+
+@ONLINE {fredwilson20061,
+    author = "Fred Wilson",
+    title  = "My Favorite Business Model",
+    month  = "may",
+    year   = "2006",
+    url    = "http://avc.com/2006/03/my_favorite_bus/",
+    note  = "[Online; accessed 21-06-2016]"
+},
+
+@ONLINE {bogdanpopescu2008,
+    author = "Bogdan Popescu",
+    title  = "The Trial of Software",
+    month  = "jul",
+    year   = "2008",
+    url    = "http://www.avangate.com/avangate-resources/article/build-software-trial-versions.htm",
+    note  = "[Online; accessed 21-06-2016]"
+},
+
+@ONLINE {brucehadley2003,
+    author = "Bruce Hadley",
+    title  = "You need to get into the shareware business",
+    month  = "aug",
+    year   = "2003",
+    url    = "http://www.get-games.com/articles/articles/softwareCEO2.htm",
+    note  = "[Online; accessed 21-06-2016]"
+},
+
+@article{jewels2001towards,
+  title={Towards a definition of B2C \& B2B e-commerce},
+  author={Jewels, Tony J and Timbrell, Greg T},
+  journal={ACIS 2001 Proceedings},
+  pages={56},
+  year={2001}
+},
+
+@ONLINE {paulhaguenickhaguematthewharrison,
+    author = "Paul Hague, Nick Hague and Matthew Harrison",
+    title  = "B2B Marketing: What Makes It Special?",
+    url    = "https://www.b2binternational.com/publications/b2b-marketing/",
+    note  = "[Online; accessed 21-06-2016]"
+},
+
+@article{Muzellec2015139,
+    title = "Two-sided Internet platforms: A business model lifecycle perspective ",
+    journal = "Industrial Marketing Management ",
+    volume = "45",
+    number = "",
+    pages = "139 - 150",
+    year = "2015",
+    note = "",
+    issn = "0019-8501",
+    doi = "http://dx.doi.org/10.1016/j.indmarman.2015.02.012",
+    url = "http://www.sciencedirect.com/science/article/pii/S0019850115000474",
+    author = "Laurent Muzellec and Sébastien Ronteau and Mary Lambkin",
+},
+
+@ONLINE {mazemaphospitals2015,
+    author = "MazeMap",
+    title  = "MazeMap in hospitals",
+    year   = "2016",
+    url    = "http://www.mazemap.com/hospitals",
+    note  = "[Online; accessed 22-06-2016]"
+},
+
+@ONLINE {lucyjohnston2012,
+    author = "LUCY JOHNSTON",
+    title  = "Missed appointments cost NHS £800m a year",
+    month  = "jan",
+    year   = "2012",
+    url    = "http://www.express.co.uk/news/uk/295726/Missed-appointments-cost-NHS-800m-a-year",
+    note  = "[Online; accessed 22-06-2016]"
+},
+
+@MISC {petterbergendal2014,
+    author = "Petter Bergendal",
+    title  = "Business Potential for Analytics of Data from Wi-Fi Networks",
+    month  = "dec",
+    year   = "2014",
+    note   = "Semester project, NTNU"
+},
+
+@MASTERSTHESIS {christianhalvorsen2011,
+    author = "Christian Halvorsen",
+    title  = "Campusguiden",
+    month  = "jul",
+    year   = "2011",
+    note   = "Master thesis, NTNU"
+},
+
+@ONLINE {billmartin2008,
+    author = "Bill Martin",
+    title  = "The Business Model Canvas",
+    month  = "jul",
+    year   = "2008",
+    url    = "http://nonlinearthinking.typepad.com/nonlinear_thinking/2008/07/the-business-model-canvas.html",
+    note  = "[Online; accessed 22-06-2016]
+},
+
+@ONLINE {aleksandarjevtic2015,
+    author = "Aleksandar Jevtic",
+    title  = "15 Biggest Malls in the World",
+    month  = "aug",
+    year   = "2015",
+    url    = "http://www.insidermonkey.com/blog/15-biggest-malls-in-the-world-367683/",
+    note  = "[Online; accessed 22-06-2016]
+},
+
+@book{anderson2012evolution,
+  title={Evolution of a retail streetscape: DP Architects on Orchard Road},
+  author={Anderson, Collin and Frampton, Kenneth and Maki, Fumihiko},
+  year={2012},
+  publisher={Images Publishing}
+},
+
+@ONLINE {marysophia2015,
+    author = "Mary Sophia",
+    title  = "Dubai Mall Sees 80m Visitors in 2014",
+    month  = "feb",
+    year   = "2015",
+    url    = "http://gulfbusiness.com/dubai-mall-sees-80m-visitors-2014/#.VbO9s1Wqqqk",
+    note  = "[Online; accessed 22-06-2016]
+},
+
+@ONLINE {itu2016,
+    author = "ITU",
+    title  = "Internet of Things Global Standards Initiative",
+    month  = "jun",
+    year   = "2016",
+    url    = "http://www.itu.int/en/ITU-T/gsi/iot/Pages/default.aspx",
+    note  = "[Online; accessed 22-06-2016]
+},
+
+@book{friess2013internet,
+  title={Internet of things: converging technologies for smart environments and integrated ecosystems},
+  author={Friess, Peter},
+  year={2013},
+  publisher={River Publishers}
+},
+
