--- a/ttm4905_msc/chapter1.tex
+++ b/ttm4905_msc/chapter1.tex
@@ -1,15 +1,13 @@
 \chapter{Introduction}
 \section{Motivation}
-
-%hvorfor navigasjon er viktig
-
 The indoor mapping service \gls{mm} started as a venture from Wireless Trondheim, an R\&D company working closely (and cooperating) with \gls{ntnu}, and whose goal it is to create sustainable ventures from new ideas. MazeMap's main service is providing an indoor mapping service aimed at large institutions such as universities, hospitals, conference venues, shopping malls and more. Users are able to access the service on any computer, tablet or smartphone, where the indoor maps themselves is the focal point. Navigation services are also available in many different forms, but using Wi-Fi is a readily available and easily deployed solution which has been co-developed with Cisco. This particular service uses a technique called trilateration~\cite{BiczokMJK14}, and is easily implemented as it uses existing Wi-Fi infrastructure to facilitate the service.
 
 
 \gls{mm} has a very scalable technical platform, in which a robust indoor-map-creating engine resides. The engine is able to convert digital floorplans into full-scale, digital indoor maps that can be accessed from any device capable of running \gls{mm}'s software. Because of its scalable nature, the time needed per customer is low, and little involvement in the setup phase is needed from \gls{mm}'s perspective. Thus, in order to accelerate customer acquisition, a proposition can be made to change or alter the business model: A freemium model has been detrimental in the success of several start-ups in the consumer market, for example Dropbox, Skype, Waze and Snapchat, but it is interesting to see if this can be applied in a \gls{b2b} or a \gls{b2bc} setting with the same success.
-
+\newpage
 
 Two market drivers are particularly protruding when it comes to indoor maps:
+
 \begin{itemize}
     \item The demand for indoor orientation as buildings become more numerous and complex.
     \item The Internet of Things and fleet management.
@@ -18,7 +16,7 @@ Two market drivers are particularly protruding when it comes to indoor maps:
 As of 2015, one of the world's largest shopping mall by total area is the Dubai Mall in Dubai, UAE~\cite{aleksandarjevtic2015}. With its 1,124,000 square meters of space and around 1,200 shops, it was one of the most visited buildings on the planet in 2011, and as much as 34 million people visited it~\cite{anderson2012evolution}, a number that rose to 80 million in 2014~\cite{marysophia2015}. With establishments of such gargantuan proportions, the inherent need for being able to find different points-of-interest presents itself. One apparent solution to this, is of course an \gls{ims} that may be provided to the customers via a smartphone application or stationary touch screens. As opposed to static maps, a digital interactive map allows for greater customer immersion, while providing more valuable information and improving the overall visitor experience. For establishments, analytical tools may be used to track customers in regards to habits, frequency of visits etc. to improve the offering to visiting clientele. Furthermore, establishments with large areas such as universities and hospitals are able to reduce stress and nervousness among visitors, by employing an \gls{ims} that can be used before a visit to familiarise the environment~\cite{mazemaphosp}. As more buildings are being built and experience internal change, updating static maps several times per year can be an undertaking that is readily mitigated by having digital, adaptable maps.
 
 
-The Global Standards Initiative on Internet of Things has defined the term \gls{iot} as a \textit{"global infrastructure for the information society, enabling advanced services by interconnecting (physical and virtual) things based on existing and evolving interoperable information and communication technologies."}~\cite{itu2016}. In essence, this means that the physical world can be shaped in a way that improves accuracy and efficiency, while granting potential economic benefits~\cite{friess2013internet}. The \gls{iot} is closely related to the concept of fleet management, which in this case pertains to objects connected to the \gls{iot} that may need to be located on a regular basis. This relates to indoor maps in the sense that as physical objects are connected to the Internet, the location of these objects may be obtained from an \gls{ims}. Hospitals are able to show personnel where an ever-changing border of a clean/dirty zone is, as well as showing where equipment is currently situated. Universities are for example able to show its staff and students where they can find the nearest printer, as opposed to merely providing a textual description of where printers are located. As more physical objects are incorporated into the \gls{iot}, the need for fleet management increases and digital indoor maps may be an effective way to accommodate this need. 
+The Global Standards Initiative on Internet of Things has defined the term \gls{iot} as a \textit{"global infrastructure for the information society, enabling advanced services by interconnecting (physical and virtual) things based on existing and evolving interoperable information and communication technologies."}~\cite{itu2016}. In essence, this means that the physical world can be shaped in a way that improves accuracy and efficiency, while granting potential economic benefits~\cite{friess2013internet}. The \gls{iot} is closely related to the concept of fleet management, which in this case pertains to objects connected to the \gls{iot} that may need to be located on a regular basis. This relates to indoor maps in the sense that as physical objects are connected to the Internet, the location of these objects may be obtained from an \gls{ims}. Hospitals are able to show personnel where an ever-changing border of a clean/dirty zone is~\cite{hambraeus1978bacterial}, as well as showing where equipment is currently situated. Universities are for example able to show its staff and students where they can find the nearest printer, as opposed to merely providing a textual description of where printers are located. As more physical objects are incorporated into the \gls{iot}, the need for fleet management increases and digital indoor maps may be an effective way to accommodate this need. 
 
 \section{Scope \& Objectives}
 In order to achieve the goal of determining the effectiveness and feasibility of a freemium model in an international \gls{b2bc}-market, while proposing a fitting business model, it is necessary to narrow down the aspects considered in this thesis. Furthermore, the aim is also to give the reader a clear and concise overview of the topics discussed.
@@ -39,7 +37,7 @@ Taking the scope into consideration, this forms the basis of the main research q
 Mainly, the contribution and novelty of this thesis is aimed at business owners wishing to expand their offerings to their customers, by employing an indoor mapping service such as MazeMap. Furthermore, the central theme of the thesis regarding the viability of freemium in a \gls{b2bc} market, may also serve businesses looking to expand their offerings and who dares to venture in new and alternative business models. The key contributions consists of the market survey made to answer the objectives set in the section above, and the resulting proposal of a business model based upon the data gathered.   
 
 \section{Outline}
-Chapter 1 introduces the reader to the thesis where motivation, scope and objectives are presented alongside the contributions and related work. In the second chapter, relevant terms such as "freemium", "B2B", "B2C" and "B2B\&C" are introduced in order to provide the user with definitions central to the thesis' themes. Chapter 3 presents the methodology employed for researching the problem and introduces the survey. Chapter 4 discusses various companies and their products, and how these have gained success or failed to obtain it, by employing a freemium business model in the \gls{b2b} market. Chapter 5 presents and discusses the results obtained in the survey, and chapter 6 presents the proposed, freemium-based business model based upon the research done.
+Chapter 1 introduces the reader to the thesis where motivation, scope and objectives are presented alongside the contributions and related work. In the second chapter, relevant terms such as "freemium", "B2B", "B2C" and "B2B\&C" are introduced in order to provide the reader with definitions central to the thesis' themes. Chapter 3 presents the methodology employed for researching the problem and introduces the survey. Chapter 4 discusses various companies, their respective products, and how these have gained success or failed to obtain it by employing a freemium business model in the \gls{b2b} market. Chapter 5 presents and discusses the results obtained in the survey, and chapter 6 presents the proposed, freemium-based business model based upon the research done.
 Chapter 7 covers the concluding remarks along with suggestions for further studies and research on the subject. Appendix A contains the invitation letter that was sent in relation to the survey, and Appendix B presents the survey as it was presented to the respondents. Lastly Appendix C contains a description of the Business Model Canvas framework used for proposing a business model in Chapter 6. 
 
 
