--- a/ttm4905_msc/chapter6.tex
+++ b/ttm4905_msc/chapter6.tex
@@ -6,7 +6,7 @@ This chapter will present the reader with the freemium-based business model prop
 \subsection{Customer Segments}
 While this thesis has primarily been focused on one customer segment, namely \glspl{hei}, an \gls{ims} provider such as \gls{mm} may focus on additional customer segments: Hospitals, venues and shopping malls (along with \glspl{hei}) constitutes \gls{mm}'s self-described customer base~\cite{mazemap}. Furthermore, more specific and niche markets can be described in cruise ships, sporting arenas (football stadiums, car-racing arenas etc.), airports and museums. The actual procurers of MazeMap are senior personnel within any aforementioned institution or organisation, that govern the procurement activities. Focusing on the customer segment presented in this thesis, a divide can be said to exist between publicly owned \glspl{hei} and privately owned \glspl{hei}. These may have different emphasis on price in long or short terms. Public institutions may be more concerned with total costs and the quality, ease-of-use and usefulness of a service, while private institutions may be more sensitive to price in order to satisfy shareholders by keeping procurement costs down. All \glspl{hei} contacted were selected on a criterion of being of a certain size in terms of staff and enrolment. In the survey, Q6 indicated that "demand" was a possible deterrent from an \gls{ims}, and this option was more than often selected by \glspl{hei} smaller in size compared to the rest of the respondents. As such, this should be taken into account when targeting \glspl{hei} as a customer segment.
 
-
+\newpage
 From the customer's perspective, a low amount of financial means is needed in order to obtain \gls{mm}'s \gls{ims}. Having existing infrastructure such as Wi-Fi for implementing navigation features, might be seen as a requisite from the customer's perspective, should they desire navigational features. Given the characteristics of \gls{b2bc}, any procurers of an \gls{ims} should have an already established consumer base, with students and staff constituting \glspl{hei}' customer base. To sum up:
 
 
@@ -23,8 +23,7 @@ How a service generates value is instrumental in choosing target customer bases.
 With interactive maps allowing both customised and automatic generation of meta-data, an \gls{ims} can provide its users with fleet management. This is related to how users can find and locate equipment, both emergency-related equipment such as fire extinguishers and non-critical equipment such as printers. In this context, the emergence of the Internet of Things is also applicable, given that a lot of previously autonomous systems are now interconnected. An \gls{ims} enables tracking of these assets, and can satisfy the demand for making these things visible to its users.  Another important use-case is how a fire department can save time in critical moments by using an \gls{ims} to discover and locate fires or other accidents, as opposed to decoding messages from a fire alarm system. In the context of another customer segment not explicitly discussed here (hospitals), it is possible to save costs by reducing the number of missed appointments~\cite{mazemaphosp}, by employing an \gls{ims}. This can also be applied to \glspl{hei} albeit at possibly smaller cost savings, due to \glspl{hei} not being as appointment-based as hospitals.  
 
 
-In terms of freemium, there are obvious cost savings for procurers of freemium-based \glspl{ims}. As the \gls{b2b} sales pipeline is longer than in a \gls{b2c} setting, a try-before-you-buy product may prevent compounded costs as a result of a long sales process. As was stated by the respondents of the survey, price presented an entry barrier to the potential purchase of an \gls{ims}, and there were some willingness to pay for some additional services. By taking this into account, this bodes well for implementing a freemium-based \gls{ims}.
-To summarise:
+In terms of freemium, there are obvious cost savings for procurers of freemium-based \glspl{ims}. As the \gls{b2b} sales pipeline is longer than in a \gls{b2c} setting, a try-before-you-buy product may prevent compounded costs as a result of a long sales process. As was stated by the respondents of the survey, price presented an entry barrier to the potential purchase of an \gls{ims}, and there were some willingness to pay for some additional services. By taking this into account, this bodes well for implementing a freemium-based \gls{ims}. To summarise:
 
 \begin{itemize}
     \item Digital interactive maps
@@ -38,9 +37,9 @@ To summarise:
     \item Provide places of interests visually as opposed to textually
     \item For freemium: Cost savings by being free initially
     \item For freemium: Try before you buy, no big initial investment. Purchase according to need
-    \item Further value-adding services
+    \item For freemium: Further value-adding services
 \end{itemize}
-
+\newpage
 \subsection{Channels}
 In order to be able to deliver its value propositions to the customer, a company delivering an \gls{ims} must use appropriate sales channels. Given that indoor maps is still a relatively new service, determining what channels to use can be difficult. It should be stressed that given the survey's respondents unfamiliarity with indoor maps, that such a service needs to emphasise its potential through value propositions, and bring awareness around them. Being an early mover proved to be important in the case of Teleopti discussed in Chapter 4, and given the fact that only 35\% of respondents already employed an \gls{ims}, further validates this notion. 
 
@@ -149,13 +148,13 @@ Free trials of the different premium modules can also be offered to be more in l
 \begin{itemize}
     \item Concept of freemium: The few pays for the many
     \item Subscription based premium modules
-    \item One-time-fee premium modules
+    \item One-time payment premium modules
     \item Bundling
 \end{itemize}
 
 \subsection{Key Activities}
 Along with the key resources, the key activities form the way value propositions are delivered to the customers. Given the \gls{saas} nature of the product delivered, software development can be listed as one key activity, which relates to the ongoing development and maintenance of the key resource that is \gls{mm}'s platform. While operating within a freemium business model, a more secluded approach might be taken in terms of business development. Targeted marketing and sales should be reserved to larger customers, since one of the main goals of freemium is to accelerate customer acquisition. On that note, it is important for a supplier of an \gls{ims} not to completely forego this type of customer under the freemium paradigm, as that will leave the larger enterprise market largely untouched. When a customer has registered in order to use the free parts of the \gls{ims}, it is important to provide sufficient support and documentation, in order for customers to get up an running, thus retaining the customer base. Customers will quickly lose interest in a new type of service provided such as an \gls{ims}, if adequate introduction to the product is absent. As such, providing this can be seen as a key activity. 
-
+\newpage
 
 Roughly 80\% of \gls{mm}'s user-base don't use any form of positioning services, so customers wanting the indoor navigation and pathfinding modules may be directed towards the solution provided by \gls{mm}'s partner Cisco for implementation of the Wi-Fi based navigation feature. There are however, a plethora of emerging technologies that provide this, some with far greater accuracy than what is possible with Wi-Fi: iBeacons (\gls{ble}-based, signals between smartphone and beacon)~\cite{ibeacon2016}, IndoorAtlas' IPS system (geomagnetic indoor positioning, smartphone with magnetic sensors reacting to earth's magnetic fields)~\cite{indooratlas2016} and Sensor Fusion by indoo.rs (using a smartphone's built in sensors)~\cite{indoo.rs2016} to name a few. \gls{mm} has stated that supporting more positioning and navigation features will be made possible should there be a demand for them in the future (Jelle, personal communication 17.09.2015). Integrating maps into a customer's existing IT-systems and maintaining the map data and metadata can also be viewed as a key activity, providing a certain lock-in effect among customers. 
 
@@ -179,8 +178,8 @@ After purchases, emphasis should be put on maintaining the platform ensuring tha
 Since the method of delivery of \gls{mm} is \gls{saas}, several resources needs to be allocated in order to provide and create the services needed to fulfil the value propositions. \gls{mm}'s servers containing the service provided, is a hugely important asset in this case. Without these, the service would not be able to be offered as a \gls{saas}. Having a centralised, consolidated infrastructure enables faster bug-fixing, and will provide customers with an up-to-date version of the services at all times. Regarding freemium, the most important aspect of the key resources is the engine that converts floor plans to interactive maps. This also makes it possible to lower the price point drastically, and through this gaining a competitive advantage over competing businesses, as discussed in Appendix C. In a scenario where freemium is implemented, the rapid onset of an expanding customer base would simply be infeasible if a manual process was in place to make the interactive indoor maps. With a robust engine generating maps, little has do be done from \gls{mm}'s side per new customer.
 
 
-In regards to human resources, the software developers with expertise and deep knowledge about the technical aspects of the \gls{ims} solution can be seen as a vital key resource. Given that an \gls{ims} often have to interface with other existing systems like timetable,room reservation and IT-systems in general, it is imperative that competent staff is in place in order to satisfy the needs of the customers. Furthermore, personnel working in R\&D and marketing may be easily overlooked in this situation, but these groups provide vital services in obtaining new customers (an important part of the freemium paradigm), and expands the value offerings towards the customers by meeting or creating demand. Having a partner in Cisco providing a distribution channel for the product, can also be seen as a key resource. Additionally having a close relationship with early movers such as \gls{ntnu}, can function as a test-bed for new features, as well as being a point of potential success-stories. There is also a benefit of having \glspl{hei} as a customer, namely enabling recruitment to further strengthen the workforce. A categorised overview of the most important key resources can be seen in Table~\ref{keyresources}, and a summary follows below:
-
+In regards to human resources, the software developers with expertise and deep knowledge about the technical aspects of the \gls{ims} solution can be seen as a vital key resource. Given that an \gls{ims} often have to interface with other existing systems like timetable,room reservation and IT-systems in general, it is imperative that competent staff is in place in order to satisfy the needs of the customers. Furthermore, personnel working in R\&D and marketing may be easily overlooked in this situation, but these groups provide vital services in obtaining new customers (an important part of the freemium paradigm), and expands the value offerings towards the customers by meeting or creating demand. Having a partner in Cisco that provides a distribution channel for the product, can also be seen as a key resource. Additionally having a close relationship with early movers such as \gls{ntnu}, can function as a test-bed for new features, as well as being a point of potential success-stories. There is also a benefit of having \glspl{hei} as a customer, namely enabling recruitment to further strengthen the workforce. A categorised overview of the most important key resources can be seen in Table~\ref{keyresources}, and a summary follows below:
+\newpage
 \begin{itemize}
     \item Servers
     \item The floor-plan-to-interactive-map engine
@@ -190,7 +189,7 @@ In regards to human resources, the software developers with expertise and deep k
 \end{itemize}
 
 
-\begin{table}[]
+\begin{table}[h]
 \centering
 \caption{Key resources by category}
 \label{keyresources}
@@ -254,7 +253,7 @@ Figure~\ref{canvas1} shows a visual representation of the business model, genera
 \begin{figure}
     \centering
     \includegraphics[width=\textwidth]{figs/busmod.png}
-    \caption{Proposed freemium-based business model for an IMS such as MazeMap, in the Business Model Canvas-framewok}
+    \caption{Proposed freemium-based business model for an IMS such as MazeMap, in the Business Model Canvas-framework}
     \label{canvas1}
 \end{figure}
 
