--- a/ttm4905_msc/chapter7.tex
+++ b/ttm4905_msc/chapter7.tex
@@ -6,7 +6,7 @@ This master's thesis has investigated if there is potential for an \gls{ims} tha
 The background introduced terms like freemium, \gls{b2b}, \gls{b2c} and \gls{b2bc} to gain an understanding of the underlying principles that this thesis is built upon. Here, the potential benefits and caveats of applying a freemium model was presented, which also has been under scrutiny throughout this thesis. The case studies of Chapter 4 showed how a selection of businesses in the \gls{b2b} market had managed to obtain success by employing a freemium business model, but it also highlighted some shortcomings that might have arisen as a consequence. The survey was presented in Chapter 5, along with the results and the discussion of the results. The findings from the survey, case studies and background created a foundation for proposing a freemium-based business model which was presented in Chapter 6, with the main contributions being how and what to monetise, as well as an increased market presence through marketing and the attendance of industry events for accelerating customer acquisition. 
 
 
-A total of 39 respondents from 14 different countries responded to the survey, with most of the respondents being representatives of \glspl{hei} in Great Britain and The Netherlands. In total, the survey garnered a response rate of 20.2\%. It was revealed that in the beginning of the survey, 64.1\% showed interest in an \gls{ims} without explicitly knowing about the potential benefits, and after potential benefits were stated this increased to 84.6\%. The number of respondents willing to pay for premium features were quite low, but in the freemium paradigm this matters little. An overwhelming majority of respondents also stated that price was a barrier in the potential procurement of an \gls{ims}. With the price factor trivialised by the introduction of freemium, it shows great potential for applying this type of business model at least for \glspl{ims}.
+A total of 39 respondents from 14 different countries responded to the survey, with most of the respondents being representatives of \glspl{hei} in Great Britain and The Netherlands. In total, the survey garnered a response rate of 20.2\%. The beginning of the survey revealed that 64.1\% were interested in a freemium-based \gls{ims} without explicitly knowing about the potential benefits, and after potential benefits were stated this increased to 84.6\%. This is an important finding in that it highlights the importance of creating demand for such a service, and it reinforces the notion that adequate marketing is vital for stimulating demand for an \gls{ims}. The number of respondents willing to pay for premium features were quite low, but in the freemium paradigm this is not a requisite for success. An overwhelming majority of respondents also stated that price was a barrier in the potential procurement of an \gls{ims}. With the price factor trivialised by the introduction of freemium, it shows great potential for applying this type of business model at least for \glspl{ims} in the \gls{hei}-segment.
 
 
 The case studies showed that customer conversion, having a good product, stimulating demand for premium features and solid customer self-service mechanisms were all important success factors for any venture that wishes to apply the freemium business model in a \gls{b2b} setting. In turn, these factors contributed to shape the proposed business model, which is not necessarily only applicable to producers of \glspl{ims}, but can be utilised in a broader sense for any company that wish to employ a freemium business model in a \gls{b2b} or \gls{b2bc} market. 
