--- a/ttm4905_msc - Copy/appendixB.tex
+++ b/ttm4905_msc - Copy/appendixB.tex
@@ -2,7 +2,7 @@
 
 \begin{figure}[H]
     \centering
-    \fbox{\includegraphics[width=\textwidth]{figs/survey.png}}
+    \fbox{\includegraphics[scale=0.5]{figs/s1.png}}
     \caption{Screenshot of the international research survey response form, part 1}
     \label{fig:s1}
 \end{figure}
@@ -23,7 +23,7 @@
 
 \begin{figure}[H]
     \centering
-    \fbox{\includegraphics[width=\textwidth]{figs/s4.png}}
+    \fbox{\includegraphics[scale=0.7]{figs/s4.png}}
     \caption{Screenshot of the international research survey response form, part 4}
     \label{fig:s4}
 \end{figure}
