--- a/ttm4905_msc - Copy/main.tex
+++ b/ttm4905_msc - Copy/main.tex
@@ -6,10 +6,10 @@
 \usepackage{pbox}
 \usepackage{csquotes}
 
-\title{Title} % The title of your assignement; NB use \newlinetitle to start a newline
-\author{Firstname Lastname} % Your firstname and lastname
-\professor{Firstname Lastname, Affiliation} % Affiliation = ITEM for instance
-\supervisor{Firstname Lastname, Affiliation}
+\title{International Potential for a Free Model in a B2B\&C market} % The title of your assignement; NB use \newlinetitle to start a newline
+\author{Kristian Tagesen} % Your firstname and lastname
+\professor{Jan A. Audestad, ITEM} % Affiliation = ITEM for instance
+\supervisor{Thomas Jelle, MazeMap}
 
 %% Uncomment the following in case you want subfigures; note that there will be a warning for the caption package
 % \let\subcaption\undefined
@@ -68,9 +68,9 @@
 \cleardoublepage
 
 %% include if relevant
-\listofalgorithms
-\addcontentsline{toc}{chapter}{List of Algorithms}
-\cleardoublepage
+% \listofalgorithms
+% \addcontentsline{toc}{chapter}{List of Algorithms}
+% \cleardoublepage
 
 %% include if relevant
 %\printglossary[title=List of Symbols, style=long]
@@ -109,5 +109,6 @@
 %% include below possible appendices (chapters)
 \include{appendixA}
 \include{appendixB}
+\include{appendixC}
 
 \end{document} 
