--- a/ttm4905_msc - Copy/preface.tex
+++ b/ttm4905_msc - Copy/preface.tex
@@ -3,7 +3,7 @@
 \noindent This thesis presents my final work and research for my Master of Science degree in Communication Technology at the \gls{ntnu}. I have specialised in ICT economics at the \gls{item}, belonging to the \gls{ime}.
 \\
 \newline
-I wish to extend thanks to my supervisor Thomas Jelle and responsible professor Jan A. Audestad for their everpresent support and valuable input throughout the semester. Furthermore, I wish to thank the respondents of the survey for their contributions, without these answers this thesis could never have been written.
+I wish to extend thanks to my supervisor Thomas Jelle and responsible professor Jan A. Audestad for their ever-present support and valuable input throughout the semester. Furthermore, I wish to thank the respondents of the survey for their contributions, as this provided invaluable data for this thesis.
 
 \begin{center}
 Kristian Tagesen
