--- a/ttm4905_msc/chapter3.tex
+++ b/ttm4905_msc/chapter3.tex
@@ -14,21 +14,24 @@ The primary goal of the survey was to assess and evaluate if customers in the \g
 The main concern when formulating and conducting the survey at an international level, is in many cases the response rate. Given the importance of the empirical data from the survey, this was a concern from the beginning. 
 
 
-The invitation letter was aptly changed to accommodate for any shortcomings the plan for sending out emails had, to increase the number of respondents. Through an iterative process, the invitation letter was changed so that it was made clear that it was possible to answer the survey in a different way than through Google Forms i.e. via telephone or video conference, but none of the respondents opted for this. Given the low response rate from the initial sendout, telephone calls where considered as means of getting in contact with the correct personnel, but this proved to be time consuming and to little use. During the course of an attempted telephone call, the author would manage to obtain ten or more contacts through email leading to the abandonment of this method of reaching out. From initially only contacting between one and three individuals from an institution, this number was greatly increased through looking up email addresses from the websites of the respective institutions. This tactic increased the response rate from 5\% to over 20\%.  The length of the survey was engineered to be short, as leaders and other senior personnel often have a busy schedule. Additionally, the questions in the survey required little to no knowledge of any technical aspects regarding an indoor mapping solution. This was done in order to appeal to as broad an audience as possible. In total 198 institutions were contacted with 39 answers submitted. A total of 5517 emails were sent, making the average number of emails sent to each institution around 28. 
+The invitation letter was aptly changed to accommodate for any shortcomings the plan for sending out emails had, to increase the number of respondents. Through an iterative process, the invitation letter was changed so that it was made clear that it was possible to answer the survey in a different way than through Google Forms i.e. via telephone or video conference, but none of the respondents opted for this. Given the low response rate from the initial send-out, telephone calls where considered as means of getting in contact with the correct personnel, but this proved to be time consuming and to little use. During the course of an attempted telephone call, the author would manage to obtain ten or more contacts through email leading to the abandonment of this method of reaching out. From initially only contacting between one and three individuals from an institution, this number was greatly increased through looking up email addresses from the websites of the respective institutions. This tactic increased the response rate from 5\% to over 20\%.  The length of the survey was engineered to be short, as leaders and other senior personnel often have a busy schedule. Additionally, the questions in the survey required little to no knowledge of any technical aspects regarding an indoor mapping solution. This was done in order to appeal to as broad an audience as possible. In total 198 institutions were contacted with 39 answers submitted. A total of 5517 emails were sent, making the average number of emails sent to each institution around 28. 
 
+\newpage
 
 During the first phase of the send-out a script handling sending emails spreadsheet was used. As described above, the spreadsheet contained a column with the numerous email addresses, while another column contained the invitation letter. The last two columns contained information whether the institution had already given an answer or didn't want to be involved with the survey, and the last column contained the name of the institution in order to have a better overview. The scripting language resembles JavaScript, and runs remotely on Google's servers~\cite{google2016} offering its users seamless integration across the various applications and services provided by Google. The source code of the script was inspired by online tutorials, and was customised for the purpose of sending emails using the information in the spreadsheet. The source code of the script can be seen in Listing~\ref{lst:email}. It should be noted that this way of sending out survey invitations was abandoned at a later stage due to inherent limitations in Google's Gmail platform: A limit of 100 recipients per day was simply not enough when the total emails that was due for sending was over 5000. This resulted in abandonment of the script, in favour of using blind copies when sending the huge volume of emails. \gls{ntnu}'s Microsoft Office365 Mail was used instead, as it imposed fewer limitations in the number of emails being sent during a 24-hour period.
 
 
 The survey itself was conceived and presented in Google Forms, an easy and widespread method not only for making surveys, but also handling replies in the form of a spreadsheet. The invitation letter contained a short URL of a link to the survey. Appendix B shows the survey as presented to the respondents, and Figure~\ref{fig:contactsheet} shows how respondents were being kept track of.
 
-
-\begin{figure}
+\begin{figure}[H]
     \centering
     \fbox{\includegraphics[width=\textwidth]{figs/contactsheet.PNG}}
-    \caption{Spreadsheet used to keep track of potential respondents}
+    \caption{Spreadsheet used to keep track of potential and actual respondents}
     \label{fig:contactsheet}
 \end{figure}
+\newpage
+
+
 
 \lstdefinelanguage{JavaScript}{
   keywords={break, case, catch, continue, debugger, default, delete, do, else, false, finally, for, function, if, in, instanceof, new, null, return, switch, this, throw, true, try, typeof, var, void, while, with},
@@ -61,7 +64,7 @@ The survey itself was conceived and presented in Google Forms, an easy and wides
 }
 
 \medskip
-\begin{lstlisting}[caption=Email Sendout Script,label={lst:email}]
+\begin{lstlisting}[caption=Email Sendout Script written in Google Scripts,label={lst:email}]
 function sendEmails() {
   var sheet = SpreadsheetApp.getActiveSheet();
   var startRow = 2;  // First mail to send
