--- a/ttm4905_msc/main.bib
+++ b/ttm4905_msc/main.bib
@@ -12,7 +12,7 @@
  numpages = {10},
 },
 
-@article{BiczokMJK14,
+@ARTICLE {BiczokMJK14,
   author    = {Gergely Bicz{\'{o}}k and
                Santiago Diez Martinez and
                Thomas Jelle and
@@ -28,170 +28,175 @@
   bibsource = {dblp computer science bibliography, http://dblp.org}
 },
 
-@book{osterwalder2013business,
+@BOOK {osterwalder2013business,
   title={Business model generation: a handbook for visionaries, game changers, and challengers},
   author={Osterwalder, Alexander and Pigneur, Yves},
   year={2013},
   publisher={John Wiley \& Sons}
 },
 
-@ONLINE {strategyzer2016,
+@MISC {strategyzer2016,
     author = "Strategyzer",
     title  = "The Business  Model Canvas",
     month  = "jun",
     year   = "2016",
     url    = "http://www.businessmodelgeneration.com/canvas/bmc",
+    howpublished = "\url{http://www.businessmodelgeneration.com/canvas/bmc}",
     note = "[Online; accessed 15-06-2016]"
 },
 
 @PHDTHESIS {alexanderosterwalder2004,
-    author = "Alexander OSTERWALDER",
-    title  = "THE BUSINESS MODEL ONTOLOGY - A PROPOSITION IN A DESIGN SCIENCE APPROACH",
-    school = "UNIVERSITE DE LAUSANNE",
+    author = "Alexander Osterwalder",
+    title  = "The Business Model Ontology - A Proposition in a Design Science Approach",
+    school = "Universite de Lausanne",
     year   = "2004",
     url    = "http://www.hec.unil.ch/aosterwa/PhD/Osterwalder_PhD_BM_Ontology.pdf"
 },
 
-@misc{google2016, 
+@MISC {google2016, 
     title={ Google Apps Script},
-    url={https://www.google.com/script/start/}, 
+    howpublished = "\url{https://www.google.com/script/start/}", 
     journal={Apps Script – Google Apps Script}, 
     author={Google},
     note = "[Online; accessed 15-06-2016]"
 },
 
-@article{jepson2009freemium,
-  title={Freemium for large enterprises:--a case study at Swedish software development company Teleopti about development and application of the freemium business model on the market for large enterprises},
-  author={Jepson, Anna and Lundin, Elin},
-  year={2009}
-},
+@MASTERSTHESIS {jepson2009freemium,
+   author = {Jepson, Anna and Lundin, Elin},
+   institution = {KTH, Machine Design (Dept.)},
+   school = {KTH, Machine Design (Dept.)},
+   title = {Freemium for large enterprises : – a case study at Swedish software development company Teleopti about development and application of the freemium business model on the market for large enterprises},
+   series = {MMK 2009:38 MCE 176},
+   year = {2009}
+}
 
-@ONLINE {teleopti2016,
+@MISC {teleopti2016,
     author = "Teleopti",
     title  = "WFM Core Functionality",
     month  = "jun",
     year   = "2016",
-    url    = "http://www.teleopti.com/content/images/wfmprocess/wfmillustration_total_600.png",
+    howpublished = "\url{http://www.teleopti.com/content/images/wfmprocess/wfmillustration_total_600.png}",
     urldate= "15-06-2016",
     note = "[Online; accessed 15-06-2016]"
 },
 
-@phdthesis{shankarananda2015empirical,
+@PHDTHESIS {shankarananda2015empirical,
   title={Empirical study and business model analysis of successful freemium strategies in digital products},
   author={Shankarananda, Pronitha Mysore},
   year={2015},
   school={Massachusetts Institute of Technology}
 },
 
-@article{lamminpaa2014b2b,
-  title={B2B SALES AND MARKETING PLAN FOR LIMECRAFT},
+@MASTERSTHESIS {lamminpaa2014b2b,
+  title={B2B Sales and Marketing Plan for Limecraft},
   author={Lamminp{\"a}{\"a}, Kalle},
   year={2014},
-  publisher={Satakunnan ammattikorkeakoulu}
+  school={Satakunta University of Applied Sciences}
 },
 
-@ONLINE {davidskokN/A,
+@MISC {davidskokN/A,
     author = "David Skok",
     title  = "How Sales Complexity impacts your Startup’s Viability",
-    year   = "N/A",
-    url    = "http://www.forentrepreneurs.com/sales-complexity/",
+    year   = "2010",
+    howpublished = "\url{http://www.forentrepreneurs.com/sales-complexity/}",
     note = "[Online; accessed 15-06-2016]"
 },
 
-@ONLINE {freemium.orgN/A,
+@MISC {freemium.orgN/A,
     author = "Freemium.org",
     title  = "Box",
-    year   = "N/A",
-    url    = "http://www.freemium.org/box/",
+    year   = "2016",
+    howpublished = "\url{http://www.freemium.org/box/}",
     note   = "[Online; accessed 16-06-2016]"
 },
 
-@ONLINE {tientzuozuora2014,
+@MISC {tientzuozuora2014,
     author = "Tien Tzuo, Zuora",
     title  = "These Numbers Show That Box CEO Aaron Levie Is A Genius",
     month  = "apr",
     year   = "2014",
-    url    = "http://www.businessinsider.com/heres-why-boxs-aaron-levie-is-a-genius-2014-4?r=US\&IR=T\&IR=T",
+    howpublished = "\url{http://www.businessinsider.com/heres-why-boxs-aaron-levie-is-a-genius-2014-4?r=US\&IR=T\&IR=T}",
     note   = "[Online; accessed 16-06-2016]"
 },
 
-@ONLINE {youtube2011,
+@MISC {youtube2011,
     author = "YouTube",
     title  = "Aaron Levie - Why Freemium Works",
     month  = "jun",
     year   = "2011",
-    url    = "https://www.youtube.com/watch?v=7hpi5nUhssY",
+    howpublished = "\url{https://www.youtube.com/watch?v=7hpi5nUhssY}",
     note   = "[Online; accessed 16-06-2016]"
 },
 
-@ONLINE {derrickharris2010,
+@MISC {derrickharris2010,
     author = "Derrick Harris",
     title  = "How Splunk Is Riding IT Search Toward an IPO",
     month  = "dec",
     year   = "2010",
-    url    = "https://gigaom.com/2010/12/17/how-splunk-is-riding-it-search-toward-an-ipo/",
+    howpublished = "\url{https://gigaom.com/2010/12/17/how-splunk-is-riding-it-search-toward-an-ipo/}",
     note   = "[Online; accessed 16-06-2016]"
 },
 
-@ONLINE {splunkinc2016,
+@MISC {splunkinc2016,
     author = "Splunk Inc.",
     title  = "Splunk Inc. Announces Fiscal Third Quarter 2016 Financial Results",
     year   = "2016",
-    url    = "http://www.splunk.com/en_us/newsroom/press-releases/2015/splunk-inc-announces-fiscal-third-quarter-2016-financial-results.html",
+    howpublished = "\url{http://www.splunk.com/en_us/newsroom/press-releases/2015/splunk-inc-announces-fiscal-third-quarter-2016-financial-results.html}",
     note   = "[Online; accessed 16-06-2016]"
 },
 
 @MISC {splunkinc20162,
     author       = "Splunk Inc.",
     title        = "Splunk Enterprise - Product Brief",
-    howpublished = "https://www.splunk.com/pdfs/product-briefs/splunk-enterprise.pdf",
+    howpublished = "\url{https://www.splunk.com/pdfs/product-briefs/splunk-enterprise.pdf}",
     year         = "2016",
-    note   = "[Accessed 16-06-2016]"
+    note   = "[Online; Accessed 16-06-2016]"
 },
 
-@ONLINE {philiplay2014,
+@MISC {philiplay2014,
     author = "Philip Lay",
     title  = "How Splunk is Playing for Power in Big Data",
     month  = "oct",
     year   = "2014",
-    url    = "http://www.philiplay.com/2014/10/how-splunk-is-playing-for-power-in-big-data/",
+    howpublished = "\url{http://www.philiplay.com/2014/10/how-splunk-is-playing-for-power-in-big-data/}",
     note   = "[Online; accessed 16-06-2016]"
 },
 
-@ONLINE {europeancommision,
+@MISC {europeancommision,
     author = "European Commision",
     title  = "Public Procurement",
-    url    = "http://ec.europa.eu/growth/single-market/public-procurement/index_en.htm",
+    howpublished = "\url{http://ec.europa.eu/growth/single-market/public-procurement/index_en.htm}",
     note   = "[Online; accessed 19-06-2016]"
 },
 
-@ONLINE {procurement,
-    title = "Procurement Law",
+@MISC {procurement,
+    author= "Lovdata",
+    title = "Norwegian Procurement Laws",
     year  = "2015",
-    url   = "https://lovdata.no/dokument/NL/lov/1999-07-16-69",
+    howpublished = "\url{https://lovdata.no/dokument/NL/lov/1999-07-16-69}",
     note  = "[Online; accessed 19-06-2016]"
 },
 
 @TECHREPORT {kristiantagesen2015,
     author      = "Kristian Tagesen",
-    title       = "Will a free model that is successfully provenby start-ups like Skype, Waze andSnapchat work in a B2B\&C market?",
+    title       = "Will a free model that is successfully proven by start-ups like Skype, Waze and Snapchat work in a B2B\&C market?",
     institution = "NTNU",
     year        = "2015",
     month       = "dec"
 },
 
-@ONLINE {patriciajones,
+@MISC {patriciajones,
     author = "Patricia Jones",
     title  = "Sales Pipeline Management - Expert Point of View",
-    url    = "http://www.convergehub.com/blog/sales-pipeline-management-expert-point-view",
+    howpublished = "\url{http://www.convergehub.com/blog/sales-pipeline-management-expert-point-view}",
     note  = "[Online; accessed 19-06-2016]"
 },
 
 
-@ONLINE {mazemap,
+@MISC {mazemap,
     author = "MazeMap",
     title  = "Why MazeMap",
-    url    = "https://www.mazemap.com/why-mazemap",
+    howpublished = "\url{https://www.mazemap.com/why-mazemap}",
     note  = "[Online; accessed 19-06-2016]"
 },
 
@@ -204,93 +209,94 @@
     month  = "jun"
 },
 
-@ONLINE {mazemaphosp,
+@MISC {mazemaphosp,
     author = "MazeMap",
     title  = "Why MazeMap - Hospitals",
-    url    = "https://www.mazemap.com/hospitals",
+    howpublished = "\url{https://www.mazemap.com/hospitals}",
     note  = "[Online; accessed 20-06-2016]"
 },
 
-@ONLINE {ciscomarket,
+@MISC {ciscomarket,
+    author= "Cisco Systems Inc.",
     title = "Cisco Marketplace - Technical Solutions: MazeMap",
     month = "jun",
     year  = "2016",
-    url   = "https://marketplace.cisco.com/catalog/companies/mazemap",
+    howpublished = "\url{https://marketplace.cisco.com/catalog/companies/mazemap}",
     note  = "[Online; accessed 20-06-2016]"
 },
 
-@book{keller2011strategic,
+@BOOK {keller2011strategic,
   title={Strategic brand management: Building, measuring, and managing brand equity},
   author={Keller, Kevin Lane and Parameswaran, MG and Jacob, Isaac},
   year={2011},
   publisher={Pearson Education India}
 },
 
-@ONLINE {ibeacon2016,
+@MISC {ibeacon2016,
     author = "iBeacon",
     title  = "What is iBeacon? What are iBeacons?",
     month  = "jun",
     year   = "2016",
-    url    = "http://www.ibeacon.com/what-is-ibeacon-a-guide-to-beacons/",
+    howpublished = "\url{http://www.ibeacon.com/what-is-ibeacon-a-guide-to-beacons/}",
     note  = "[Online; accessed 21-06-2016]"
 }.
 
-@ONLINE {indooratlas2016,
+@MISC {indooratlas2016,
     author = "IndoorAtlas",
     title  = "Making Indoor Worlds Discoverable",
     month  = "jun",
     year   = "2016",
-    url    = "https://www.indooratlas.com/",
+    howpublished = "\url{https://www.indooratlas.com/}",
     note  = "[Online; accessed 21-06-2016]"
 },
 
 
-@ONLINE {indoo.rs2016,
+@MISC {indoo.rs2016,
     author = "Indoo.rs",
-    title  = "Technology",
+    title  = "Technology: Hybrid Localization – combining different approaches to deliver the best accuracy",
     month  = "jun",
     year   = "2016",
-    url    = "http://indoo.rs/technology/",
+    howpublished = "\url{http://indoo.rs/technology/}",
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@ONLINE {fredwilson20062,
+@MISC {fredwilson20062,
     author = "Fred Wilson",
     title  = "The Freemium Business Model",
     month  = "mar",
     year   = "2006",
-    url    = "http://avc.com/2006/03/the_freemium_bu/",
+    howpublished = "\url{http://avc.com/2006/03/the_freemium_bu/}",
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@ONLINE {katherineheires2007,
+@MISC {katherineheires2007,
     author = "Katherine Heires",
     title  = "Why It Pays to Give Away the Store",
     month  = "mar",
     year   = "2007",
-    url    = "http://money.cnn.com/magazines/business2/business2_archive/2006/10/01/8387115/",
+    howpublished = "\url{http://money.cnn.com/magazines/business2/business2_archive/2006/10/01/8387115/}",
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@ONLINE {chrisanderson2008,
+@MISC {chrisanderson2008,
     author = "Chris Anderson",
     title  = "The three kinds of FREE",
     month  = "sep",
     year   = "2008",
-    url    = "http://www.longtail.com/the_long_tail/2008/09/the-three-kinds.html",
+    howpublished = "\url{http://www.longtail.com/the_long_tail/2008/09/the-three-kinds.html}",
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@ONLINE {jonaskjellberg2014,
+@MISC {jonaskjellberg2014,
     author = "Jonas Kjellberg",
     title  = "Troublemaking Skype - Technoport 2014",
     month  = "may",
     year   = "2014",
-    url    = "https://www.youtube.com/watch?v=G3a2NX2kIb0",
+    howpublished = "\url{https://www.youtube.com/watch?v=G3a2NX2kIb0}",
     note  = "[Online video; accessed 21-06-2016]"
 },
 
-@book{selden1996,
+@BOOK {selden1996,
  author = {Selden, Paul H.},
  title = {Sales Process Engineering: A Personal Workshop},
  year = {1996},
@@ -298,79 +304,79 @@
  publisher = {ASQ Quality Press},
 },
 
-@ONLINE {chrisanderson2012,
+@MISC {chrisanderson2012,
     author = "Chris Anderson",
     title  = "Finding a Freemium model that works for you",
     month  = "nov",
     year   = "2012",
-    url    = "http://www.longtail.com/the_long_tail/2008/11/finding-a-freem.html",
+    howpublished = "\url{http://www.longtail.com/the_long_tail/2008/11/finding-a-freem.html}",
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@ONLINE {lifeofentrepeneur2015,
+@MISC {lifeofentrepeneur2015,
     author = "Life of Entrepeneur",
     title  = "Meaning of Cannibalization",
     month  = "aug",
     year   = "2015",
-    url    = "http://webcache.googleusercontent.com/search?q=cache:-0xB-sk2WuAJ:lifeofentrepreneur.net/tag/meaning-of-cannibalization/+\&cd=1\&hl=no\&ct=clnk\&gl=no",
+    howpublished = "\url{http://webcache.googleusercontent.com/search?q=cache:-0xB-sk2WuAJ:lifeofentrepreneur.net/tag/meaning-of-cannibalization/+\&cd=1\&hl=no\&ct=clnk\&gl=no}",
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@ONLINE {microsoft2016,
+@MISC {microsoft2016,
     author = "Microsoft",
     title  = "BizSpark",
     month  = "jun",
     year   = "2016",
-    url    = "https://www.microsoft.com/bizspark/",
+    howpublished = "\url{https://www.microsoft.com/bizspark/}",
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@ONLINE {splunk2016,
+@MISC {splunk2016,
     author = "Splunk",
     title  = "Splunk® Light",
     month  = "jun",
     year   = "2016",
-    url    = "http://www.splunk.com/en_us/products/splunk-light.html",
+    howpublished = "\url{http://www.splunk.com/en_us/products/splunk-light.html}",
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@ONLINE {chrisanderson2008feb,
+@MISC {chrisanderson2008feb,
     author = "Chris Anderson",
     title  = "Free! Why \$0.00 Is the Future of Business",
     month  = "feb",
     year   = "2008",
-    url    = "http://www.wired.com/2008/02/ff-free/",
+    howpublished = "\url{http://www.wired.com/2008/02/ff-free/}",
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@ONLINE {fredwilson20061,
+@MISC {fredwilson20061,
     author = "Fred Wilson",
     title  = "My Favorite Business Model",
     month  = "may",
     year   = "2006",
-    url    = "http://avc.com/2006/03/my_favorite_bus/",
+    howpublished = "\url{http://avc.com/2006/03/my_favorite_bus/}",
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@ONLINE {bogdanpopescu2008,
+@MISC {bogdanpopescu2008,
     author = "Bogdan Popescu",
     title  = "The Trial of Software",
     month  = "jul",
     year   = "2008",
-    url    = "http://www.avangate.com/avangate-resources/article/build-software-trial-versions.htm",
+    howpublished = "\url{http://www.avangate.com/avangate-resources/article/build-software-trial-versions.htm}",
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@ONLINE {brucehadley2003,
+@MISC {brucehadley2003,
     author = "Bruce Hadley",
     title  = "You need to get into the shareware business",
     month  = "aug",
     year   = "2003",
-    url    = "http://www.get-games.com/articles/articles/softwareCEO2.htm",
+    howpublished = "\url{http://www.get-games.com/articles/articles/softwareCEO2.htm}",
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@article{jewels2001towards,
+@ARTICLE {jewels2001towards,
   title={Towards a definition of B2C \& B2B e-commerce},
   author={Jewels, Tony J and Timbrell, Greg T},
   journal={ACIS 2001 Proceedings},
@@ -378,14 +384,14 @@
   year={2001}
 },
 
-@ONLINE {paulhaguenickhaguematthewharrison,
+@MISC {paulhaguenickhaguematthewharrison,
     author = "Paul Hague, Nick Hague and Matthew Harrison",
     title  = "B2B Marketing: What Makes It Special?",
-    url    = "https://www.b2binternational.com/publications/b2b-marketing/",
+    howpublished = "\url{https://www.b2binternational.com/publications/b2b-marketing/}",
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@article{Muzellec2015139,
+@ARTICLE {Muzellec2015139,
     title = "Two-sided Internet platforms: A business model lifecycle perspective ",
     journal = "Industrial Marketing Management ",
     volume = "45",
@@ -395,24 +401,16 @@
     note = "",
     issn = "0019-8501",
     doi = "http://dx.doi.org/10.1016/j.indmarman.2015.02.012",
-    url = "http://www.sciencedirect.com/science/article/pii/S0019850115000474",
+    howpublished = "\url{http://www.sciencedirect.com/science/article/pii/S0019850115000474}",
     author = "Laurent Muzellec and Sébastien Ronteau and Mary Lambkin",
 },
 
-@ONLINE {mazemaphospitals2015,
-    author = "MazeMap",
-    title  = "MazeMap in hospitals",
-    year   = "2016",
-    url    = "http://www.mazemap.com/hospitals",
-    note  = "[Online; accessed 22-06-2016]"
-},
-
-@ONLINE {lucyjohnston2012,
-    author = "LUCY JOHNSTON",
+@MISC {lucyjohnston2012,
+    author = "Lucy Johnston",
     title  = "Missed appointments cost NHS £800m a year",
     month  = "jan",
     year   = "2012",
-    url    = "http://www.express.co.uk/news/uk/295726/Missed-appointments-cost-NHS-800m-a-year",
+    howpublished = "\url{http://www.express.co.uk/news/uk/295726/Missed-appointments-cost-NHS-800m-a-year}",
     note  = "[Online; accessed 22-06-2016]"
 },
 
@@ -429,56 +427,67 @@
     title  = "Campusguiden",
     month  = "jul",
     year   = "2011",
+    school = "NTNU",
     note   = "Master thesis, NTNU"
 },
 
-@ONLINE {billmartin2008,
+@MISC {billmartin2008,
     author = "Bill Martin",
     title  = "The Business Model Canvas",
     month  = "jul",
     year   = "2008",
-    url    = "http://nonlinearthinking.typepad.com/nonlinear_thinking/2008/07/the-business-model-canvas.html",
-    note  = "[Online; accessed 22-06-2016]
+    howpublished = "\url{http://nonlinearthinking.typepad.com/nonlinear_thinking/2008/07/the-business-model-canvas.html}",
+    note  = "[Online; accessed 22-06-2016]"
 },
 
-@ONLINE {aleksandarjevtic2015,
+@MISC {aleksandarjevtic2015,
     author = "Aleksandar Jevtic",
     title  = "15 Biggest Malls in the World",
     month  = "aug",
     year   = "2015",
-    url    = "http://www.insidermonkey.com/blog/15-biggest-malls-in-the-world-367683/",
-    note  = "[Online; accessed 22-06-2016]
+    howpublished = "\url{http://www.insidermonkey.com/blog/15-biggest-malls-in-the-world-367683/}",
+    note   = "[Online; accessed 22-06-2016]"
 },
 
-@book{anderson2012evolution,
+@BOOK {anderson2012evolution,
   title={Evolution of a retail streetscape: DP Architects on Orchard Road},
   author={Anderson, Collin and Frampton, Kenneth and Maki, Fumihiko},
   year={2012},
   publisher={Images Publishing}
 },
 
-@ONLINE {marysophia2015,
+@MISC {marysophia2015,
     author = "Mary Sophia",
     title  = "Dubai Mall Sees 80m Visitors in 2014",
     month  = "feb",
     year   = "2015",
-    url    = "http://gulfbusiness.com/dubai-mall-sees-80m-visitors-2014/#.VbO9s1Wqqqk",
-    note  = "[Online; accessed 22-06-2016]
+    howpublished = "\url{http://gulfbusiness.com/dubai-mall-sees-80m-visitors-2014/#.VbO9s1Wqqqk}",
+    note  = "[Online; accessed 22-06-2016]"
 },
 
-@ONLINE {itu2016,
+@MISC {itu2016,
     author = "ITU",
     title  = "Internet of Things Global Standards Initiative",
     month  = "jun",
     year   = "2016",
-    url    = "http://www.itu.int/en/ITU-T/gsi/iot/Pages/default.aspx",
-    note  = "[Online; accessed 22-06-2016]
+    howpublished = "\url{http://www.itu.int/en/ITU-T/gsi/iot/Pages/default.aspx}",
+    note  = "[Online; accessed 22-06-2016]"
 },
 
-@book{friess2013internet,
+@BOOK {friess2013internet,
   title={Internet of things: converging technologies for smart environments and integrated ecosystems},
   author={Friess, Peter},
   year={2013},
   publisher={River Publishers}
 },
 
+@ARTICLE {hambraeus1978bacterial,
+  title={Bacterial contamination in a modern operating suite, 2. Effect of a zoning system on contamination of floors and other surfaces},
+  author={Hambraeus, A and Bengtsson, S and Laurell, G},
+  journal={Journal of Hygiene},
+  volume={80},
+  number={01},
+  pages={57--67},
+  year={1978},
+  publisher={Cambridge Univ Press}
+}
